# fc-adan-alignment

./: .gitignore  README.md  pyproject.toml
alignments/: fc_adan_alignment.ipynb  fc_adan_alignment.py
alignments/output/: FC_ADAN.csv
alignments/resources/adan/: adavn-description.txt  adavn_vessels_with_connections.csv  adavn_vessels_with_connections.xlsx
